--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.0",
     "gatsby": "^2.0.91",
-    "gatsby-image": "^1.0.24",
+    "gatsby-image": "^2.0.26",
     "gatsby-link": "^2.0.8",
     "gatsby-paginate": "^1.0.6",
     "gatsby-plugin-catch-links": "^2.0.9",
@@ -19,7 +19,8 @@
     "gatsby-plugin-sharp": "^2.0.17",
     "gatsby-plugin-sitemap": "^2.0.4",
     "gatsby-plugin-styled-components": "^3.0.4",
-    "gatsby-remark-images": "^1.5.18",
+    "gatsby-remark-copy-linked-files": "^2.0.8",
+    "gatsby-remark-images": "^1.5.67",
     "gatsby-remark-prismjs": "^3.2.0",
     "gatsby-remark-responsive-iframe": "^2.0.8",
     "gatsby-source-filesystem": "^2.0.16",
