--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Matt Horrall",
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.0",
+    "disqus-react": "^1.0.5",
     "gatsby": "^2.0.98",
     "gatsby-image": "^2.0.26",
     "gatsby-link": "^2.0.8",
